k8s/wncp-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wncp-backend
  name: wncp-backend-service
  namespace: wncp-test-1
spec:
  clusterIP: 10.4.29.129
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32257
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-backend
  sessionAffinity: None
  type: NodePort
