k8s/wncp-fronend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wncp-fronend
  name: wncp-fronend-service
  namespace: wncp-test-1
spec:
  clusterIP: 10.4.30.4
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32625
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-fronend
  sessionAffinity: None
  type: NodePort
